# store_project_2024

./: .gitignore  README.md  alembic.ini  main.py  pyproject.toml
app/: __init__.py  auth.py  crud.py  database.py  models.py  schemas.py
app/api/: __init__.py  cart.py  categories.py  products.py
tests/: test.db  test_api.py  test_auth.py  test_cart.py  test_categories.py  test_crud.py  test_main.py  test_products.py  test_subcategories.py
